Fix renderer_main.cc to work on not-POSIX platforms other than Windows.

RendererMain() was not initializing renderer on platforms that don't
declare OS_POSIX, except Windows. Also cleaned-up RendererProcessImpl
initialization to make this problem less likely in the future.

Bug: 847669
Change-Id: I9a0ed7b39959deb980838699a3ebbec28c469265
Reviewed-on: https://chromium-review.googlesource.com/1077603
Reviewed-by: Fabrice de Gans-Riberi <fdegans@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563729}
Former-commit-id: 55195e9d7cb230094041ce5331c4831f9a65d158